# xmas-tree

./: Cargo.toml  Makefile  README.md  avr-atmega328p.json
src/: README.md  animations.rs  logic.rs  main.rs
src/logic/: animations.rs  defs.rs  interface.rs
